fixed spacing
- added borders to visualize the space
- removed extra indentions

--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 body {
     background-color: blanchedalmond;
@@ -19,7 +20,8 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 30px 10%;
-    padding-bottom: 150px;
+    /* padding-bottom: 150px; */
+    border: 1px solid black; /* for guidelines */
 }
 
 .logo {
@@ -58,11 +60,13 @@ button:hover {
 .main-container{
     display: flex;
     flex-direction: row;
-    margin-left: 100px;
+    margin: 50px 100px;
+    border: 1px solid black; /* for guidelines */ 
 }
 
 .icons{
-    margin: 10px;
+    margin: 20px;
+    border: 1px solid black; /* for guidelines */
 }
 
 .icon_links {
@@ -79,9 +83,9 @@ button:hover {
     width: 100%;
     font-family: "Poppins", sans-serif;
     justify-content: center;
-  }
+}
   
-  .wrapper .icon {
+.wrapper .icon {
     position: relative;
     background: #fff;
     border-radius: 50%;
@@ -96,9 +100,9 @@ button:hover {
     box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
     cursor: pointer;
     transition: all 0.2s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-  }
+}
   
-  .wrapper .tooltip {
+.wrapper .tooltip {
     position: absolute;
     top: 0;
     font-size: 14px;
@@ -110,9 +114,9 @@ button:hover {
     opacity: 0;
     pointer-events: none;
     transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-  }
+}
   
-  .wrapper .tooltip::before {
+.wrapper .tooltip::before {
     position: absolute;
     content: "";
     height: 8px;
@@ -122,40 +126,45 @@ button:hover {
     left: 50%;
     transform: translate(-50%) rotate(45deg);
     transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-  }
+}
   
-  .wrapper .icon:hover .tooltip {
+.wrapper .icon:hover .tooltip {
     top: -45px;
     opacity: 1;
     visibility: visible;
     pointer-events: auto;
-  }
+}
   
-  .wrapper .icon:hover span,
-  .wrapper .icon:hover .tooltip {
+.wrapper .icon:hover span,
+.wrapper .icon:hover .tooltip {
     text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.1);
-  }
+}
   
-  .wrapper .facebook:hover,
-  .wrapper .facebook:hover .tooltip,
-  .wrapper .facebook:hover .tooltip::before {
+.wrapper .facebook:hover,
+.wrapper .facebook:hover .tooltip,
+.wrapper .facebook:hover .tooltip::before {
     background: #1877f2;
     color: #fff;
-  }
+}
   
-  .wrapper .twitter:hover,
-  .wrapper .twitter:hover .tooltip,
-  .wrapper .twitter:hover .tooltip::before {
+.wrapper .twitter:hover,
+.wrapper .twitter:hover .tooltip,
+.wrapper .twitter:hover .tooltip::before {
     background: #1da1f2;
     color: #fff;
-  }
+}
   
-  .wrapper .instagram:hover,
-  .wrapper .instagram:hover .tooltip,
-  .wrapper .instagram:hover .tooltip::before {
+.wrapper .instagram:hover,
+.wrapper .instagram:hover .tooltip,
+.wrapper .instagram:hover .tooltip::before {
     background: #e4405f;
     color: #fff;
-  }
+}
+
+.hero {
+    border: 1px solid black; /* for guidelines */
+    margin: 10px;
+}
 
 .heading{
     font-size: 4em;
@@ -163,7 +172,7 @@ button:hover {
 .subheading{
     width: 100%;
     font: 1.4em sans-serif;
-    text-align: center;
+    /* text-align: center; */
 }
 
 .paragraph{
